# bgremoval

./: Cargo.toml  README.md
src/: bgremoval.rs  capture.rs  decoder.rs  main.rs  viewer.rs  virtual_camera.rs
