[package]
name = "BGRemoval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cudarc = { version = "0.17.0", features = ["cuda-12090"] }
fast_image_resize = "5.2.1"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt"] }
# onnxruntime = "0.0.14"
# opencv = { version = "0.95.1", features = ["clang-runtime"] }
raylib = "5.5.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
# tract-onnx = "0.21.13"
turbojpeg = "1.3.3"
v4l = "0.14.0"
